crates/oxc_language_server/src/linter/snapshots/fixtures_linter_astro_debugger.astro.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 1, character: 0 }, end: Position { line: 1, character: 8 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/astro/debugger.astro"
related_information[0].location.range: Range { start: Position { line: 1, character: 0 }, end: Position { line: 1, character: 8 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
            

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 10, character: 2 }, end: Position { line: 10, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/astro/debugger.astro"
related_information[0].location.range: Range { start: Position { line: 10, character: 2 }, end: Position { line: 10, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
            

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 14, character: 2 }, end: Position { line: 14, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/astro/debugger.astro"
related_information[0].location.range: Range { start: Position { line: 14, character: 2 }, end: Position { line: 14, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
            

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 18, character: 2 }, end: Position { line: 18, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/astro/debugger.astro"
related_information[0].location.range: Range { start: Position { line: 18, character: 2 }, end: Position { line: 18, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
