crates/oxc_language_server/src/linter/snapshots/fixtures_linter_hello_world.js@deny_no_console.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
code: "eslint(no-console)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-console.html"
message: "eslint(no-console): Unexpected console statement.\nhelp: Delete this console statement."
range: Range { start: Position { line: 0, character: 0 }, end: Position { line: 0, character: 11 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/hello_world.js"
related_information[0].location.range: Range { start: Position { line: 0, character: 0 }, end: Position { line: 0, character: 11 } }
severity: Some(Error)
source: Some("oxc")
tags: None
