crates/oxc_language_server/src/linter/snapshots/fixtures_linter_invalid_syntax@debugger.ts_invalid.vue.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
########## 
file: fixtures/linter/invalid_syntax/debugger.ts
----------
########## Diagnostic Reports

code: ""
code_description.href: "None"
message: "Unexpected token"
range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/invalid_syntax/debugger.ts"
related_information[0].location.range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
severity: Some(Error)
source: Some("oxc")
tags: None
########### Code Actions/Commands

########## 
file: fixtures/linter/invalid_syntax/invalid.vue
----------
########## Diagnostic Reports

code: ""
code_description.href: "None"
message: "Missing initializer in const declaration\nhelp: Add an initializer (e.g. ` = undefined`) here"
range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/invalid_syntax/invalid.vue"
related_information[0].location.range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
severity: Some(Error)
source: Some("oxc")
tags: None
########### Code Actions/Commands
