crates/oxc_language_server/src/linter/snapshots/fixtures_linter_invalid_syntax_debugger.ts@invalid_syntax_file.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
code: ""
code_description.href: "None"
message: "Unexpected token"
range: Range { start: Position { line: 2147483647, character: 2147483647 }, end: Position { line: 2147483647, character: 2147483647 } }
related_information: None
severity: Some(Error)
source: Some("oxc")
tags: None
