crates/oxc_language_server/src/linter/snapshots/fixtures_linter_svelte@debugger.svelte.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
########## 
file: fixtures/linter/svelte/debugger.svelte
----------
########## Diagnostic Reports

code: "eslint(no-unassigned-vars)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-unassigned-vars.html"
message: "'title' is always 'undefined' because it's never assigned.\nhelp: Variable declared without assignment. Either assign a value or remove the declaration."
range: Range { start: Position { line: 3, character: 12 }, end: Position { line: 3, character: 17 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/svelte/debugger.svelte"
related_information[0].location.range: Range { start: Position { line: 3, character: 12 }, end: Position { line: 3, character: 17 } }
severity: Some(Warning)
source: Some("oxc")
tags: None

code: "eslint(no-unassigned-vars)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-unassigned-vars.html"
message: "'person' is always 'undefined' because it's never assigned.\nhelp: Variable declared without assignment. Either assign a value or remove the declaration."
range: Range { start: Position { line: 4, character: 12 }, end: Position { line: 4, character: 18 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/svelte/debugger.svelte"
related_information[0].location.range: Range { start: Position { line: 4, character: 12 }, end: Position { line: 4, character: 18 } }
severity: Some(Warning)
source: Some("oxc")
tags: None

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/svelte/debugger.svelte"
related_information[0].location.range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
########### Code Actions/Commands
CodeAction: 
Title: Disable no-unassigned-vars for this line
Is Preferred: Some(true)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 3,
            character: 0,
        },
        end: Position {
            line: 3,
            character: 0,
        },
    },
    new_text: "\t// oxlint-disable-next-line no-unassigned-vars\n",
}


CodeAction: 
Title: Disable no-unassigned-vars for this whole file
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 1,
            character: 0,
        },
        end: Position {
            line: 1,
            character: 0,
        },
    },
    new_text: "// oxlint-disable no-unassigned-vars\n",
}


CodeAction: 
Title: Disable no-unassigned-vars for this line
Is Preferred: Some(true)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 4,
            character: 0,
        },
        end: Position {
            line: 4,
            character: 0,
        },
    },
    new_text: "\t// oxlint-disable-next-line no-unassigned-vars\n",
}


CodeAction: 
Title: Disable no-unassigned-vars for this whole file
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 1,
            character: 0,
        },
        end: Position {
            line: 1,
            character: 0,
        },
    },
    new_text: "// oxlint-disable no-unassigned-vars\n",
}


CodeAction: 
Title: Remove the debugger statement
Is Preferred: Some(true)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 1,
            character: 1,
        },
        end: Position {
            line: 1,
            character: 10,
        },
    },
    new_text: "",
}


CodeAction: 
Title: Disable no-debugger for this line
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 1,
            character: 0,
        },
        end: Position {
            line: 1,
            character: 0,
        },
    },
    new_text: "\t// oxlint-disable-next-line no-debugger\n",
}


CodeAction: 
Title: Disable no-debugger for this whole file
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 1,
            character: 0,
        },
        end: Position {
            line: 1,
            character: 0,
        },
    },
    new_text: "// oxlint-disable no-debugger\n",
}
