crates/oxc_language_server/src/linter/snapshots/fixtures_linter_svelte_debugger.svelte.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Delete this code."
range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/svelte/debugger.svelte"
related_information[0].location.range: Range { start: Position { line: 1, character: 1 }, end: Position { line: 1, character: 10 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
