crates/oxc_language_server/src/linter/snapshots/fixtures_linter_vue@debugger.vue.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
########## 
file: fixtures/linter/vue/debugger.vue
----------
########## Diagnostic Reports

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 4, character: 8 }, end: Position { line: 4, character: 17 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 4, character: 8 }, end: Position { line: 4, character: 17 } }
severity: Some(Warning)
source: Some("oxc")
tags: None

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html"
message: "`debugger` statement is not allowed\nhelp: Remove the debugger statement"
range: Range { start: Position { line: 8, character: 4 }, end: Position { line: 8, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 8, character: 4 }, end: Position { line: 8, character: 13 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
########### Code Actions/Commands
CodeAction: 
Title: Remove the debugger statement
Is Preferred: Some(true)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 4,
            character: 8,
        },
        end: Position {
            line: 4,
            character: 17,
        },
    },
    new_text: "",
}


CodeAction: 
Title: Disable no-debugger for this line
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 4,
            character: 8,
        },
        end: Position {
            line: 4,
            character: 8,
        },
    },
    new_text: "\n// oxlint-disable-next-line no-debugger\n",
}


CodeAction: 
Title: Disable no-debugger for this whole file
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 4,
            character: 8,
        },
        end: Position {
            line: 4,
            character: 8,
        },
    },
    new_text: "\n// oxlint-disable no-debugger\n",
}


CodeAction: 
Title: Remove the debugger statement
Is Preferred: Some(true)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 8,
            character: 4,
        },
        end: Position {
            line: 8,
            character: 13,
        },
    },
    new_text: "",
}


CodeAction: 
Title: Disable no-debugger for this line
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 8,
            character: 0,
        },
        end: Position {
            line: 8,
            character: 0,
        },
    },
    new_text: "    // oxlint-disable-next-line no-debugger\n",
}


CodeAction: 
Title: Disable no-debugger for this whole file
Is Preferred: Some(false)
TextEdit: TextEdit {
    range: Range {
        start: Position {
            line: 7,
            character: 0,
        },
        end: Position {
            line: 7,
            character: 0,
        },
    },
    new_text: "// oxlint-disable no-debugger\n",
}
