crates/oxc_language_server/src/linter/snapshots/fixtures_linter_vue_debugger.vue.snap
---
source: crates/oxc_language_server/src/linter/tester.rs
---
code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Delete this code."
range: Range { start: Position { line: 5, character: 4 }, end: Position { line: 5, character: 12 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 5, character: 4 }, end: Position { line: 5, character: 12 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
            

code: "eslint(no-debugger)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger"
message: "`debugger` statement is not allowed\nhelp: Delete this code."
range: Range { start: Position { line: 10, character: 4 }, end: Position { line: 10, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/linter/vue/debugger.vue"
related_information[0].location.range: Range { start: Position { line: 10, character: 4 }, end: Position { line: 10, character: 13 } }
severity: Some(Warning)
source: Some("oxc")
tags: None
